--- a/admin_page.html
+++ b/admin_page.html
@@ -24,22 +24,20 @@
     <h1>Welcome To Admin Page</h1>
     <!-- live status bar section start -->
     <div class="row">
-      <div class="card-01"><span id="temp">Temperature<img src="svg/temp-svg.svg" width="25px">: <spanid="temp_live_data">0 C</span></span>
-        <select class="select_sensor" id="display-sensor">
-          <option value="Average" selected disabled>Average: 35<span>&#8451;</span></option>
+      <div class="card-01"><span  id="temp">Temperature<img src="svg/temp-svg.svg" width="25px">: <span id="temp_live_data">0 C</span></span>
+        <select class="select_sensor" id="display-sensor-1">
+          <option value="Average" selected >Average: <span id="avg_temp_val">&#8451;</span></option>
         </select>
       </div>
-      <div class="card-02"><span id="soil-moisture">Soil Moisture <img src="svg/soil.svg" width="25px">: <span
-            id="soil_live_data">0</span></span>
-            <select class="select_sensor" id="display-sensor">
-              <option value="Average" selected disabled>Average: 45</option>
-          </select>
+      <div class="card-02"><span id="soil-moisture">Soil Moisture <img src="svg/soil.svg" width="25px">: <span id="soil_live_data">0</span></span>
+        <select class="select_sensor" id="display-sensor-2">
+          <option value="Average" selected >Average: <span id="avg_moisture_val"></span></option>
+      </select>
       </div>
-      <div class="card-03"><span id="humidity">Humidity <img src="svg/rain.svg" width="25px">: <span
-            id="hum_live_data">0%</span></span>
-            <select class="select_sensor" id="display-sensor">
-              <option value="Average" selected disabled>Average: 800</option>
-            </select>
+      <div class="card-03"><span  id="humidity">Humidity <img src="svg/rain.svg" width="25px">: <span id="hum_live_data">0%</span></span> 
+        <select class="select_sensor" id="display-sensor-3">
+          <option value="Average" selected >Average: <span id="avg_hum_val"></span></option>
+        </select>
       </div>
     </div>
     <!-- live status bar section end-->
@@ -91,7 +89,7 @@
   <script type="module" src="js/displayCrops.js"></script>
   <script type="module" src="js/admin_page.js"></script>
   <script src="js/displaySensorValue.js"></script>
-
+  <script type="module" src="js/fetchLiveData.js"></script>
 </body>
 
 </html>
