--- a/admin_page.html
+++ b/admin_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
   <meta charset="UTF-8">
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="css/admin_page.css">
   <link rel="stylesheet" href="css/modal.css">
 
-
 </head>
 
 <body>
@@ -17,6 +16,7 @@
   <div class="head-section">
     <div class="status">Status: <span id="motor-status">OFF</span></div>
     <div class="login" id="login-btn">Logout</div>
+    <div id="google_translate_element"></div>
   </div>
 
   <!--card layout start-->
@@ -90,6 +90,15 @@
   <script type="module" src="js/admin_page.js"></script>
   <script src="js/displaySensorValue.js"></script>
   <script type="module" src="js/fetchLiveData.js"></script>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
 
 </html>
