--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
   <div class="head-section">
     <div class="status">Status: <span id="motor-status">OFF</span></div>
     <div class="login" id="login-btn">Login</div>
+    <div id="google_translate_element"></div>
   </div>
  
   <!--card layout start-->
@@ -94,6 +95,14 @@
   <script src="js/displaySensorValue.js"></script>
   <script src="js/Send_Notifications.js"></script>
   <script type="module" src="js/fetchLiveData.js"></script>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+    
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
 </body>
 
 </html>
