--- a/main.html
+++ b/main.html
@@ -25,17 +25,17 @@
     <div class="row">
       <div class="card-01"><span  id="temp">Temperature<img src="svg/temp-svg.svg" width="25px">: <span id="temp_live_data">0 C</span></span>
         <select class="select_sensor" id="display-sensor-1">
-          <option value="Average" selected >Average: <span id="avg_temp_val">&#8451;</span></option>
+          <option value="sensor_list" selected disabled>Sensor List</option>
         </select>
       </div>
       <div class="card-02"><span id="soil-moisture">Soil Moisture <img src="svg/soil.svg" width="25px">: <span id="soil_live_data">0</span></span>
         <select class="select_sensor" id="display-sensor-2">
-          <option value="Average" selected >Average: <span id="avg_moisture_val"></span></option>
+          <option value="sensor_list" selected disabled>Sensor List</option>
       </select>
       </div>
       <div class="card-03"><span  id="humidity">Humidity <img src="svg/rain.svg" width="25px">: <span id="hum_live_data">0%</span></span> 
         <select class="select_sensor" id="display-sensor-3">
-          <option value="Average" selected >Average: <span id="avg_hum_val"></span></option>
+          <option value="sensor_list" selected disabled>Sensor List</option>
         </select>
       </div>
     </div>
@@ -92,7 +92,7 @@
   <script type="module" src="js/script.js"></script>
   <script type="module" src="js/set_timer.js"></script>
   <script type="module" src="js/displayCrops.js"></script>
-  <script src="js/displaySensorValue.js"></script>
+  <script type="module" src="js/displaySensorValue.js"></script>
   <script src="js/Send_Notifications.js"></script>
   <script type="module" src="js/fetchLiveData.js"></script>
   <script type="text/javascript">
