--- a/admin_page.html
+++ b/admin_page.html
@@ -88,9 +88,9 @@
   <script type="module" src="js/script.js"></script>
   <script type="module" src="js/displayCrops.js"></script>
   <script type="module" src="js/admin_page.js"></script>
-  <script src="js/displaySensorValue.js"></script>
+  <script type="module" src="js/displaySensorValue.js"></script>
   <script type="module" src="js/fetchLiveData.js"></script>
-
+  <script src="js/Send_Notifications.js"></script>
 <script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
